--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	
 	--eduguide_blue: #16367c !important;
 	--eduguide_orange: #f19336 !important;
-	/* font-family: Ruda; */
+	font-family: Ruda;
 	
 }
 
