--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -1,10 +1,11 @@
 h1 {
+	display: block;
 	font-family: Ruda;
 	font-size: 4vw;
-	color: var(--eduguide_blue) !important;
+	/* color: var(--eduguide_blue) !important; */
 	text-align: center;
-	margin-top: 2%;
-	margin-bottom: -0.1%;
+	/* margin-top: 2%;
+	margin-bottom: -0.1%; */
 	font-weight: 600 !important;
 }
 /* th, td {
@@ -12,6 +13,13 @@ h1 {
   } */
   table {
 	border-spacing: 30px;
+  }
+  .logo_view{
+	  background-color: white;
+	border-radius: 300px;
+	margin-left: 20px;
+	height: 70px;
+	width: 70px
   }
 
 p {
@@ -134,13 +142,27 @@ h6 {
 	margin-left: 1%;
 	width: 4.5%;
 }
+.rounded-yellow-btn{
+	border-radius: 70px;
+	/* border: 2px ; */
+	font-size: 1.55vw;
+	color:#16367c;
+	font-weight: bold;
+	/* font-weight: bold; */
+	/* background-color: var(--eduguide_blue); */
+	background-color: var(--eduguide_orange);
+	padding: 5px 20px;
+}
 
 .test-btn {
+	border-radius: 25px;
+	border: 2px solid ;
 	font-size: 1.55vw;
-	background-color: var(--eduguide_blue);
-	color: var(--eduguide_orange);
+	font-weight: bold;
+	/* background-color: var(--eduguide_blue); */
+	color: var(--eduguide_blue);
 	padding: 0.9vw 2vw;
-	border: none;
+	/* border: none; */
 }
 .intro-edu {
 	width: 60%;
@@ -412,6 +434,7 @@ h6 {
 		height: 100%;
 	}
 	h1 {
+		/* display: absolute; */
 		font-family: Ruda;
 		font-size: 50px;
 		color: var(--eduguide_blue) !important;
