--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -143,11 +143,14 @@ h6 {
 	width: 4.5%;
 }
 .rounded-yellow-btn{
+	position: absolute;
 	border-radius: 70px;
 	/* border: 2px ; */
 	font-size: 1.55vw;
 	color:#16367c;
 	font-weight: bold;
+	margin-top: -25px;
+	margin-left: 20px;
 	/* font-weight: bold; */
 	/* background-color: var(--eduguide_blue); */
 	background-color: var(--eduguide_orange);
