--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -12,6 +12,7 @@ h1 {
 	padding: 15px;
   } */
   table {
+	  
 	border-spacing: 30px;
   }
   .logo_view{
@@ -23,12 +24,16 @@ h1 {
   }
 
 p {
+	
 	font-family: Ruda;
 	font-size: 1.5vw;
 	color: var(--eduguide_blue) !important;
 	text-align: center;
 	margin-top: 2.5%;
 	font-weight: 400 !important;
+}
+.break{
+	max-width: 80%;
 }
 
 .about__link {
@@ -200,18 +205,39 @@ h6 {
 }
 
 .faqsbox {
-	height: auto;
-	padding: 10px;
+	padding-left: 50px;
+	padding-right: 50px;
+	
+	border-left: solid white;
+	border-right: solid white;
+	border-width: 100px;
+	text-align: center;
+	
+    /* border:2px solid green; */
+    width:50%;
+    float:left;
+    height:100%;
+	
+	
 	background: #ffc78f;
+}
+.faq1 {
+	font-size: 20px;
+	
 }
 .faqsbox b{
 	font-size: 25px;
 }
 
 .faqstable {
-	width: 95%;
-	margin-left: auto;
-	margin-right: auto;
+	
+	width:85%;
+    max-width:2000px;
+    /* border:2px solid black; */
+    margin: 0 auto;
+    padding:10px;
+	height:100%;
+	max-height: 2000px;
 }
 
 .faqstd {
