--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -28,7 +28,6 @@ img {
   font-size: 20px;
 }
 .navbar__links {
-  
   /* flex: 0.5; */
   float: center;
   display: flex;
@@ -41,7 +40,6 @@ img {
   /* margin-right: 10%; */
   justify-content: space-evenly;
   color: var(--eduguide_blue) !important;
-  
 }
 
 .navbar__link {
@@ -51,22 +49,20 @@ img {
   transition: 0.2s;
   text-decoration: none;
 }
-.navbar__link img{
+.navbar__link img {
   position: absolute;
   margin-left: -70px;
   margin-top: -10px;
 }
-.logo-label{
- /* float: center; */
- position: relative;
- /* display: block;  */
-color: white;
- margin-top: 300px;
- 
- 
- font-size: 200%;
-}
+.logo-label {
+  /* float: center; */
+  position: relative;
+  /* display: block;  */
+  color: white;
+  margin-top: 300px;
 
+  font-size: 200%;
+}
 
 .navbar__link:hover {
   color: var(--eduguide_orange);
@@ -82,15 +78,33 @@ color: white;
   list-style: none;
   text-decoration: none;
   display: flex;
-  
+
   padding-right: 30px;
-  
+
   /* padding-left: 80px; */
   transition: 0.2s;
   margin: -5.9%;
   margin-right: -14%;
   font-size: 1.5vw;
-  color: var(--eduguide_blue) !important;
+  color: var(--eduguide_orange) !important;
+}
+.rounded-yellow-btn {
+  position: absolute;
+  border-radius: 70px;
+  /* border: 2px ; */
+  font-size: 1.55vw;
+  color: #16367c;
+  font-weight: bold;
+  margin-top: -25px;
+  margin-left: 20px;
+  /* font-weight: bold; */
+  /* background-color: var(--eduguide_blue); */
+  background-color: var(--eduguide_orange);
+  padding: 5px 20px;
+}
+
+.user-name {
+  color: var(--eduguide_orange) !important;
 }
 
 .login-item li {
@@ -109,11 +123,9 @@ color: white;
     align-items: center;
     cursor: pointer;
     margin-top: 0.5vw;
-    
   }
-  .navbar__logo img{
+  .navbar__logo img {
     width: 250%;
-    
   }
   /* .logo_size {
     height: px;
@@ -128,14 +140,12 @@ color: white;
     display: block;
     width: 100px;
   }
-  
+
   .navbar__wrapper {
     color: var(--eduguide_blue) !important;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    
   }
 }
-
