--- a/src/account/Account.css
+++ b/src/account/Account.css
@@ -9,6 +9,16 @@
   margin-left: auto;
   margin-right: auto;
 }
+.sign-up-form{
+  border: solid var(--eduguide_orange);
+  background-color: peachpuff;
+  border-radius: 10px;
+  font-size: 1.55vw;
+  width: 70%;
+  color: var(--eduguide_blue);
+  margin-left: auto;
+  margin-right: auto;
+}
 b{
   
   /* line-height: 110px; */
@@ -16,7 +26,7 @@ b{
   /* margin-left: 10%; */
 }
 .form-alignment{
-  width: 50%;
+  width: 70%;
 }
 .edit-form {
   font-size: 1.55vw;
