--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -32,12 +32,15 @@ footer {
 	background-color: var(--eduguide_blue);
 	color: white;
 	position: absolute;
-	bottom: inherit;
+	
 	/* margin-top: 20%; */
 	width: 100vw;
-	height: 20%;
+	height: 13%;
 	background-size: cover;
 	/* margin-left: none; */
+}
+footer text{
+	font-size: 30px;
 }
 
 .footer-icons {
