--- a/src/container/Card.css
+++ b/src/container/Card.css
@@ -1,5 +1,6 @@
 .card-container {
-  width: 27%;
+  
+  width: 20%;
   float: left;
   box-shadow: 0px 0px 15px -4px;
   transition: 0.5s;
@@ -12,10 +13,10 @@
   box-shadow: 0px 0px 15px 0px;
 }
 .image-container img {
-  overflow: hidden;
-  margin: 1vw;
-  width: 15vw;
-  height: 11vw;
+  /* overflow: hidden; */
+  /* margin: 1vw; */
+  width: 100%;
+  height: 100%;
 }
 
 a {
