--- a/src/container/Card.css
+++ b/src/container/Card.css
@@ -2,7 +2,7 @@
   
   width: 20%;
   float: left;
-  box-shadow: 0px 0px 15px -4px;
+  /* box-shadow: 0px 0px 15px -4px; */
   transition: 0.5s;
   animation: ease-in-out;
   margin-left: 5%;
