--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -227,6 +227,20 @@ h6 {
 	background-color: var(--eduguide_orange);
 	padding: 5px 20px;
 }
+.profile-button{
+	/* position: absolute; */
+	border-radius: 70px;
+	/* border: 2px ; */
+	font-size: 100%;
+	color:#ffffff;
+	font-weight: bold;
+	margin-top: -25px;
+	margin-left: 2%;
+	/* font-weight: bold; */
+	/* background-color: var(--eduguide_blue); */
+	background-color: #16367c;
+	padding: 5px 20px;
+}
 
 .test-btn {
 	border-radius: 25px;
@@ -312,14 +326,15 @@ h6 {
 
 .commicon {
 	width: 140px;
-	margin-top: -10px;
-	margin-left: -10px;
+	
+	margin-left: -20px;
 }
 
 .postbtn {
 	cursor: pointer;
 	font-size: 20px;
 	transition: 0.2s;
+	font-weight: bold;
 	text-decoration: none;
 	color: var(--eduguide_blue);
 	background-color: white;
@@ -334,13 +349,30 @@ h6 {
 
 .commentbtn {
 	cursor: pointer;
+	position: absolute;
 	font-size: 1.5vw;
 	transition: 0.2s;
 	text-decoration: none;
 	color: var(--eduguide_blue);
 	background-color: white;
 	border: none;
-	margin-left: 120px;
+	margin-left: -24%;
+}
+.sharebuttton {
+	position: relative;
+	cursor: pointer;
+	/* position: relative; */
+	font-size: 1.5vw;
+	transition: 0.2s;
+	text-decoration: none;
+	color: var(--eduguide_blue);
+	background-color: white;
+	border: none;
+	margin-left: -13%;
+}
+.community_btn{
+	margin-bottom: 1;
+	width: 75%;
 }
 
 .commentbtn:hover {
@@ -348,6 +380,8 @@ h6 {
 }
 
 .sharebtn {
+	
+	position:absolute;
 	cursor: pointer;
 	font-size: 1.5vw;
 	transition: 0.2s;
@@ -358,7 +392,7 @@ h6 {
 	margin-left: 15px;
 }
 
-.sharebtn:hover {
+.sharebuttton:hover {
 	color: var(--eduguide_orange);
 }
 
@@ -376,9 +410,26 @@ h6 {
 .deletebtn:hover {
 	color: var(--eduguide_orange);
 }
+.rounded-red-button{
+	position: absolute;
+	border-radius: 70px;
+	
+	/* border: 2px ; */
+	font-size: 20px;
+	color:#ffffff;
+	/* font-weight: bold; */
+	/* margin-top: -25px; */
+	/* margin-right: 1px; */
+	margin-left: 3500%;
+	/* font-weight: bold; */
+	/* background-color: var(--eduguide_blue); */
+	background-color: red;
+	padding: 5px 20px;
+
+}
 
 .comm_entry {
-	font-size: 1.2vw;
+	font-size: 20px;
 	color: var(--eduguide_blue);
 	width: 60%;
 	height: 60%;
@@ -386,7 +437,7 @@ h6 {
 	border-color: var(--eduguide_blue);
 	text-align: initial;
 	background: #ffc78f;
-	margin-left: -40px;
+	
 }
 
 .about__table {
@@ -419,6 +470,31 @@ h6 {
 }
 .col-half {
 	text-align: center;
+	
+    /* border:2px solid green; */
+    width:50%;
+    float:left;
+    height:100%;
+     
+}
+.container-profile{
+	width:75%;
+    max-width:2000px;
+    /* border:2px solid black; */
+    margin: 0 auto;
+    padding:10px;
+	height:100%;
+	max-height: 2000px;
+}
+.row-profile{
+	height:300px; /*set height*/
+    /* border:2px solid blue; */
+    width:75%;
+    margin-bottom:10px;
+   
+}
+.col-myprofile {
+	/* text-align: center; */
 	
     /* border:2px solid green; */
     width:50%;
@@ -596,16 +672,7 @@ h6 {
 		/* margin-top: 10px;
 		margin-left: 10px; */
 	}
-	.postbtn {
-		cursor: pointer;
-		font-size: 20px;
-		transition: 0.2s;
-		text-decoration: none;
-		color: var(--eduguide_blue);
-		background-color: white;
-		border: none;
-		margin-left: 70%;
-	}
+	
 	.commfield {
 		font-size: 20px;
 		color: var(--eduguide_blue);
