--- a/src/account/Account.css
+++ b/src/account/Account.css
@@ -6,8 +6,8 @@
   font-size: 1.55vw;
   width: 50%;
   color: var(--eduguide_blue);
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 .profile-form {
   border: solid var(--eduguide_orange);
@@ -18,6 +18,9 @@
   color: var(--eduguide_blue);
   margin-left: auto;
   margin-right: auto;
+}
+.profile-form label{
+  margin-left:10px;
 }
 .sign-up-form{
   border: solid var(--eduguide_orange);
@@ -102,16 +105,18 @@ form {
   font-family: Ruda;
   color: var(--eduguide_blue);
   list-style: none;
-  font-size: 1.55vw;
-  margin-left: 0%;
+  font-size: 24px;
+  background-color: peachpuff;
+  /* margin-left: 0%;
   margin-bottom: -1vw;
-  margin-top: -20%;
+  margin-top: -20%; */
   border-top: none;
   border-right: none;
   border-left: none;
   border-width: unset;
   width: 100%;
 }
+
 
 .pass-field {
   color: var(--eduguide_blue);
