--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -488,10 +488,24 @@ h6 {
 	max-height: 2000px;
 }
 .row-profile{
-	height:300px; /*set height*/
+	height:250px; /*set height*/
     /* border:2px solid blue; */
-    width:75%;
+    width:70%;
     margin-bottom:10px;
+   
+}
+.row-pass{
+	height:250px; /*set height*/
+    /* border:2px solid blue; */
+    width:50%;
+    margin-bottom:10px;
+   
+}
+.row-edit{
+	height:250px; /*set height*/
+    /* border:2px solid blue; */
+    width:70%;
+    /* margin-bottom:10px; */
    
 }
 .col-myprofile {
@@ -503,6 +517,25 @@ h6 {
     height:100%;
      
 }
+.col-edit {
+	/* text-align: center; */
+	
+    /* border:2px solid green; */
+    width:33%;
+    float:left;
+    height:100%;
+     
+}
+.col-edit img {
+	/* text-align: center; */
+	
+    /* border:2px solid green; */
+   height:100%;
+   width: 100%;
+   /* margin-bottom: 10px; */
+   margin-top: -60px;
+     
+}
 .col-myprofile img {
 	/* text-align: center; */
 	
@@ -511,13 +544,19 @@ h6 {
    margin-left: 50px;
      
 }
+.col-mypassword b{
+	margin-left: 20px;
+}
+.col-mypassword input{
+	margin-left: -20px;
+}
 .col-mypassword {
 	/* text-align: center; */
 	
     /* border:2px solid green; */
-	width:33%;
+	width:50%;
     float:left;
-    height:100%;
+    height:90%;
 }
 
 .col2 {
