--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -26,3 +26,18 @@
   font-weight: 600;
   text-decoration: none;
 }
+.dash-board-card{
+  margin-bottom: 30px;
+  width: 45%;
+  cursor: pointer;
+  padding: 30px;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: rgba(241, 147, 54, 0.53);
+}
+.num-border{
+  border: 4px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  /* border: block black; */
+}
