--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -31,9 +31,29 @@
   width: 45%;
   cursor: pointer;
   padding: 30px;
+  height: 250px;
   font-size: 30px;
   font-weight: bold;
   background-color: rgba(241, 147, 54, 0.53);
+}
+.dash-board-card img{
+height: 100px;
+}
+.dash-row{
+  height:70px; /*set height*/
+    /* border:2px solid blue; */
+    width:100%;
+    margin-bottom:10px;
+    padding:10px;
+}
+.dash-col {
+	text-align: center;
+	
+    /* border:2px solid green; */
+    width:50%;
+    float:left;
+    height:100%;
+     
 }
 .num-border{
   border: 4px solid black;
