--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -31,12 +31,22 @@
   width: 45%;
   cursor: pointer;
   padding: 30px;
+  height: 100px;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: rgba(241, 147, 54, 0.53);
+}
+.dash-board-card-dash{
+  margin-bottom: 30px;
+  width: 45%;
+  cursor: pointer;
+  padding: 30px;
   height: 250px;
   font-size: 30px;
   font-weight: bold;
   background-color: rgba(241, 147, 54, 0.53);
 }
-.dash-board-card img{
+.dash-board-card-dash img{
 height: 100px;
 }
 .dash-row{
@@ -56,8 +66,10 @@ height: 100px;
      
 }
 .num-border{
-  border: 4px solid black;
+  font-size: 50px;
+  /* height: 250px; */
+  border: 8px solid black;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px;
   /* border: block black; */
 }
