--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -17,7 +17,11 @@ h1 {
 	border:2px var(--eduguide_blue) solid;
 	background-color: peachpuff;
 }
-
+.com-comment{
+	/* height: 700px; */
+	color:white;
+	font-size: 20px;
+}
 .card-size{
 	margin-right: -22%;
 	width: 100%;
@@ -323,7 +327,8 @@ h6 {
 	font-size: 1.2vw;
 	color: var(--eduguide_blue);
 	width: 60%;
-	height: 60%;
+	/* height: 60%; */
+	border-radius: 10px;
 	border: thin;
 	border-color: var(--eduguide_blue);
 	border-style: solid;
@@ -362,26 +367,45 @@ h6 {
 .commentbtn {
 	position: relative;
 	cursor: pointer;
+	
 	/* position: relative; */
 	font-size: 1.5vw;
 	transition: 0.2s;
 	text-decoration: none;
 	color: var(--eduguide_blue);
-	background-color: white;
+	background-color: peachpuff;
 	border: none;
-	margin-left: -10%;
+	margin-left: -60%;
+	/* margin-left: -10%; */
+}
+.commentbtn img{
+	height:50px;
+}
+.commentbtn img:hover{
+	height:60px;
+	transition: 0.2s;
 }
 .sharebuttton {
-	
+	/* display: none; */
 	cursor: pointer;
 	position: absolute;
 	font-size: 1.5vw;
 	transition: 0.2s;
 	text-decoration: none;
 	color: var(--eduguide_blue);
-	background-color: white;
+	background-color: peachpuff;
 	border: none;
-	margin-left: -20%;
+	margin-left: -27%;
+}
+.sharebuttton img {
+	/* display: none; */
+	height:40px;
+	/* margin-left: -20%; */
+}.sharebuttton img:hover {
+	/* display: none; */
+	transition: 0.2s;
+	height:50px;
+	/* margin-left: -20%; */
 }
 .community_btn{
 	margin-bottom: 1;
@@ -400,9 +424,9 @@ h6 {
 	transition: 0.2s;
 	text-decoration: none;
 	color: var(--eduguide_blue);
-	background-color: white;
+	background-color: black;
 	border: none;
-	margin-left: 15px;
+	/* margin-left: 15px; */
 }
 
 .sharebuttton:hover {
@@ -433,7 +457,7 @@ h6 {
 	/* font-weight: bold; */
 	/* margin-top: -25px; */
 	/* margin-right: 1px; */
-	margin-left: 3500%;
+	margin-left: 4000%;
 	/* font-weight: bold; */
 	/* background-color: var(--eduguide_blue); */
 	background-color: red;
@@ -450,7 +474,7 @@ h6 {
 	/* font-weight: bold; */
 	/* margin-top: -25px; */
 	/* margin-right: 1px; */
-	margin-left: 30%;
+	margin-left: 57%;
 	/* font-weight: bold; */
 	/* background-color: var(--eduguide_blue); */
 	background-color: red;
