account and admin button

--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -263,7 +263,7 @@ h6 {
 	/* font-weight: bold; */
 	/* background-color: var(--eduguide_blue); */
 	background-color: #16367c;
-	padding: 5px 20px;
+	padding: 1% 4%;
 }
 
 .test-btn {
