--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -31,8 +31,8 @@
   width: 45%;
   cursor: pointer;
   padding: 30px;
-  height: 100px;
-  font-size: 30px;
+  height: 70%;
+  font-size: 150%;
   font-weight: bold;
   background-color: rgba(241, 147, 54, 0.53);
 }
