--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -598,7 +598,7 @@ h6 {
    height:100%;
    width: 100%;
    /* margin-bottom: 10px; */
-   margin-top: -60px;
+   margin-top: -15%;
      
 }
 .col-myprofile img {
@@ -610,6 +610,7 @@ h6 {
      
 }
 .col-mypassword b{
+	font-size: 150%;
 	margin-left: 20px;
 }
 .col-mypassword input{
