--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -72,6 +72,7 @@ img {
   font-size: 1.5vw;
   transition: 0.2s;
   text-decoration: none;
+  color: white;
 }
 .navbar__link img {
   position: absolute;
